# fine-weather

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  README.md  README_ZH.md  docker-compose.yml  index.html
.github/workflows/: app.yml  app_deploy.yml  documentation.yml  manager.yml  release.yml
app/: .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.js
app/src/: App.vue  main.js  style.css
app/src/components/: ImageAsync.vue  ImageCard.vue  ImageDetail.vue
app/src/views/: FineWeather.vue
assets/: index-64d61bed.css  index-8ad7a0fd.js  index-a94dd1d6.css  index-b84a9c9c.js  index-c33bcb53.js  index-d9e5c2c6.css  index-e49fc4c6.js  index-f9206718.css
manager/: .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
manager/docs/: features.md  index.md
manager/docs/zh/: changelog.md  features.md
manager/fw_manager/: __init__.py  commands.py  forms.py  models.py  utils.py
manager/fw_manager/blueprints/: __init__.py  error.py  manager.py  retriever.py
manager/fw_manager/templates/: base.html  manager.html  settings.html
manager/src/: app.py
manager/src/fw_manager/: forms.py
manager/src/templates/: manager.html
manager/tests/: conftest.py  test_manager.py
